ujra drop database bug